--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Arushi Kothari
+tagline: My Blog
 email: arushi.kothari26@gmail.com
 
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -26,9 +27,6 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-redirect-from
-
-include:
-  - .well-known
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
